# Robot_Control_with_LLM

install/: local_setup.sh  setup.sh
install/cpp_pkg/lib/cpp_pkg/: llama_controller  simple_tf_kinematics
install/cpp_pkg/share/cpp_pkg/: local_setup.sh  package.sh
install/gazebo_ros2_control/share/gazebo_ros2_control/: package.sh
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_position_pid  example_tricycle_drive  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: package.sh
install/llama_bringup/share/llama_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/llama_cli/share/llama_cli/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/llama_cpp_vendor/lib/pkgconfig/: llama.pc
install/llama_cpp_vendor/share/llama_cpp_vendor/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/llama_demos/share/llama_demos/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/llama_msgs/share/llama_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/llama_ros/lib/llama_ros/: llama_node  llava_node
install/llama_ros/share/llama_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_controller/share/robot_controller/: local_setup.sh  (+1 more)
log/: latest_build
src/cpp_pkg/: CMakeLists.txt
(+177 files in other folders)
